链表基本内容学习

--- a/js/算法-链表.md
+++ b/js/算法-链表.md
@@ -12,6 +12,23 @@
 
 链表也支持数据的查找、插入和删除操作。
 
+单链表的插入和删除操作的是O(1)，查找则是O(n);
+
+循环链表：与单链表唯一区别就是尾结点指针指向链表的头结点
+![](https://static001.geekbang.org/resource/image/86/55/86cb7dc331ea958b0a108b911f38d155.jpg)
+
+优点：从链尾到链头比较方便，当要处理的数据具有环形结构特点时适合
+
+双向链表：三个域，前驱结点地址的指针域，数据域，后继结点地址的指针域
+![](https://static001.geekbang.org/resource/image/cb/0b/cbc8ab20276e2f9312030c313a9ef70b.jpg)
+
+插入和删除操作因为有前驱缘故，减少后继结点地址的指针域
+
+缓存就是空间换时间思想
+
+空间和时间博弈，主要针对不同应用场景
+
+[双向循环链表](https://static001.geekbang.org/resource/image/d1/91/d1665043b283ecdf79b157cfc9e5ed91.jpg)
 
 
 
