--- a/js/算法-链表.md
+++ b/js/算法-链表.md
@@ -31,4 +31,45 @@
 [双向循环链表](https://static001.geekbang.org/resource/image/d1/91/d1665043b283ecdf79b157cfc9e5ed91.jpg)
 
 
+## LRU缓存淘汰算法
+维护一个有序单链表，越靠近链表尾部的结点为老数据。</br>
+1、如果此数据之前已经缓存在链表中，遍历得到这个数据对应的结点，将其从原来的位置删除，然后再插入到链表的头部。</br>
+2、如果此数据没有在缓存链表中，又可以分为两种情况：
+* 如果此时缓存未满，则将此结点直接插入到链表的头部；
+* 如果此时缓存已满，则链表尾结点删除，将新的数据结点插入链表的头部。
+
+
+指针和引用都是储存所指对象的内存地址
+
+## 理解指针或引用的含义
+将某个变量赋值给指针，实际上就是将这个变量的地址赋值给指针，或者反过来说，指针中存储了这个变量的内存地址，指向了这个变量，通过指针就能找到这个变量。
+
+## 警惕指针丢失和内存泄漏
+
+插入结点时，一定要注意操作的顺序</br>
+删除链表结点时，也一定要记得手动释放内存空间</br>
+
+
+## 利用哨兵简化实现难度
+针对链表的插入、删除操作，需要对插入第一个结点和删除最后一个结点的情况进行特殊处理</br>
+head 指针都会一直指向这个哨兵结点。我们也把这种有哨兵结点的链表叫带头链表。相反，没有哨兵结点的链表就叫作不带头链表
+
+## 重点留意边界条件处理
+我经常用来检查链表代码是否正确的边界条件有这样几个：
+* 如果链表为空时，代码是否能正常工作？
+* 如果链表只包含一个结点时，代码是否能正常工作？
+* 如果链表只包含两个结点时，代码是否能正常工作？
+* 代码逻辑在处理头结点和尾结点的时候，是否能正常工作？
+
+## 举例画图，辅助思考
+举例法和画图法
+
+![](https://static001.geekbang.org/resource/image/4a/f8/4a701dd79b59427be654261805b349f8.jpg)
+
+5 个常见的链表操作
+* 单链表反转
+* 链表中环的检测
+* 两个有序的链表合并
+* 删除链表倒数第 n 个结点
+* 求链表的中间结点
 
