--- a/js/算法-复杂度分析.md
+++ b/js/算法-复杂度分析.md
@@ -24,17 +24,17 @@ f(n)：表示每行代码执行的次数总和
 
 当 n 很大时，公式中的低阶、常量、系数三部分并不左右增长趋势，可以忽略。
 
-只需要记录一个最大量级，如果用大 O 表示法表示</br>
-T(n) = O(2n+2) => T(n) = O(n)</br>
+只需要记录一个最大量级，如果用大 O 表示法表示<br/>
+T(n) = O(2n+2) => T(n) = O(n)<br/>
 T(n) = O(2n<sup>2</sup>+2n+3) => T(n) = O(n<sup>2</sup>)
 
-* 只关注循环执行次数最多的一段代码</br>
+* 只关注循环执行次数最多的一段代码<br/>
 解释：复杂度表示方法只是表示一种变化趋势，忽略公式中常量、低阶、系数，只需要记录一个最大阶的量级，**我们在分析一个算法、一段代码的时间复杂度的时候，也只关注循环执行次数最多的那一段代码就可以了**，这段核心代码执行次数的n的量级，就是整段要分析代码的时间复杂度
 
-* 加法法则：总复杂度等于量级最大的那段代码的复杂度</br>
+* 加法法则：总复杂度等于量级最大的那段代码的复杂度<br/>
 抽象为公式：T1(n)=O(f(n)),T2(n)=O(g(n)); 那么T(n)=T1(n)+T2(n)=max(O(f(n)),O(g(n))) = O(max(f(n), g(n)));
 
-* 乘法法则：嵌套代码的复杂度等于嵌套内外代码复杂度的乘积</br>
+* 乘法法则：嵌套代码的复杂度等于嵌套内外代码复杂度的乘积<br/>
 如果T1(n)=O(f(n))，T2(n)=O(g(n));
 那么T(n)=T1(n)\*T2(n)=O(f(n))\*O(g(n))=O(f(n)*g(n));
 
@@ -67,7 +67,7 @@ while ( i <= n) {
 **采用大O标记复杂度的时候，可以忽略系数，即 O(Cf(n)) = O(f(n))**
 
 
-3、O(m+n)、O(m*n)</br>
+3、O(m+n)、O(m*n)<br/>
 代码的复杂度由两个数据的规模来决定的
 ```c
 int cal(int m, int n) {
@@ -111,7 +111,7 @@ void print( int n ) {
 常见的空间复杂度就是O(1)、O(n)、O(n<sup>2</sup>)，像O(logn)、O(logn)这样的对数阶复杂平时都用不到。
 
 
-从低阶到高阶有：O(1)、O(logn)、O(n)、O(nlogn)、O(n<sup>2</sup>)</br>
+从低阶到高阶有：O(1)、O(logn)、O(n)、O(nlogn)、O(n<sup>2</sup>)<br/>
 越高阶复杂度的算法，执行效率越低
 ![图形表示](https://static001.geekbang.org/resource/image/49/04/497a3f120b7debee07dc0d03984faf04.jpg)
 
@@ -124,7 +124,7 @@ void print( int n ) {
 
 
 ### 最好、最坏时间复杂度
-最理想的情况下，执行这段代码的时间复杂度为最好</br>
+最理想的情况下，执行这段代码的时间复杂度为最好<br/>
 最糟糕的情况下，执行这段代码的时间复杂度为最坏
 
 ### 平均情况时间复杂度
