--- a/js/算法-链表.md
+++ b/js/算法-链表.md
@@ -32,8 +32,8 @@
 
 
 ## LRU缓存淘汰算法
-维护一个有序单链表，越靠近链表尾部的结点为老数据。</br>
-1、如果此数据之前已经缓存在链表中，遍历得到这个数据对应的结点，将其从原来的位置删除，然后再插入到链表的头部。</br>
+维护一个有序单链表，越靠近链表尾部的结点为老数据。<br/>
+1、如果此数据之前已经缓存在链表中，遍历得到这个数据对应的结点，将其从原来的位置删除，然后再插入到链表的头部。<br/>
 2、如果此数据没有在缓存链表中，又可以分为两种情况：
 * 如果此时缓存未满，则将此结点直接插入到链表的头部；
 * 如果此时缓存已满，则链表尾结点删除，将新的数据结点插入链表的头部。
@@ -46,12 +46,12 @@
 
 ## 警惕指针丢失和内存泄漏
 
-插入结点时，一定要注意操作的顺序</br>
-删除链表结点时，也一定要记得手动释放内存空间</br>
+插入结点时，一定要注意操作的顺序<br/>
+删除链表结点时，也一定要记得手动释放内存空间<br/>
 
 
 ## 利用哨兵简化实现难度
-针对链表的插入、删除操作，需要对插入第一个结点和删除最后一个结点的情况进行特殊处理</br>
+针对链表的插入、删除操作，需要对插入第一个结点和删除最后一个结点的情况进行特殊处理<br/>
 head 指针都会一直指向这个哨兵结点。我们也把这种有哨兵结点的链表叫带头链表。相反，没有哨兵结点的链表就叫作不带头链表
 
 ## 重点留意边界条件处理
