算法栈完成

--- a/js/算法-数组.md
+++ b/js/算法-数组.md
@@ -6,4 +6,5 @@
 非线性表：二叉树、堆、图等，数据之间并不是简单的前后关系
 ![非线性表](https://static001.geekbang.org/resource/image/6e/69/6ebf42641b5f98f912d36f6bf86f6569.jpg)
 
-**连续的内存空间和相同类型的数据**
+**连续的内存空间和相同类型的数据**<br />
+[数组](https://github.com/wangzheng0822/algo/blob/master/javascript/05_array/Array.md)
