--- a/js/算法-链表.md
+++ b/js/算法-链表.md
@@ -73,3 +73,106 @@ head 指针都会一直指向这个哨兵结点。我们也把这种有哨兵结
 * 删除链表倒数第 n 个结点
 * 求链表的中间结点
 
+[单链表](https://github.com/wangzheng0822/algo/blob/master/javascript/06_linkedlist/SinglyLinkedList.js)
+
+[单链表反转](https://github.com/wangzheng0822/algo/blob/master/javascript/07_linkedlist/LinkedListAlgo.js)
+
+
+```js
+/**
+ *
+ *  1) 单链表的插入、删除、查找操作
+ *  2) 链表中储存的是int类型的数据
+ *
+ */
+
+class Node {
+  constructor ( element ) {
+    this.element = element;
+    this.next = null;
+  }
+}
+
+class LinkedList {
+  constructor () {
+    this.head = new Node('head');
+  }
+
+  // 根据value查找节点
+  findByValue( item ) {
+    let currentNode = this.head.next;
+    while( currentNode !== null && currentNode.element !== item ) {
+      currentNode = currentNode.next;
+    }
+    console.log( currentNode );
+    return currentNode === null ? -1 : currentNode;
+  }
+
+  // 根据index查找节点，下标从0开始
+  findByIndex( index ) {
+    let currentNode = this.head.next;
+    let pos = 0;
+    while( currentNode !== null && pos !== index ) {
+      currentNode = currentNode.next;
+      pos++;
+    }
+    console.log( currentNode );
+    return currentNode === null ? -1 : currentNode;
+  }
+
+  // 向链表末尾追加节点
+  append( newElement ) {
+    const node = new Node( newElement );
+    let currentNode = this.head;
+    while( currentNode.next ) {
+      currentNode = currentNode.next;
+    }
+    currentNode.next = node;
+  }
+  
+  // 指定元素向后插入
+  insert( newElement, element ) {
+    const currentNode = this.findByValue( element );
+    if ( currentNode === - 1 ) {
+      console.log( '未找到插入位置' );
+      return;
+    }
+    const newNode = new Node( newElement );
+    newNode.next = currentNode.next;
+    currentNode.next = newNode;
+  }
+
+  // 查找前一个
+  findPrev( item ) {
+    let currentNode = this.head;
+    while( currentNode.next !== null && currentNode.next.element !== item ) {
+      currentNode = currentNode.next;
+    }
+
+    if ( currentNode.next === null ) {
+      return -1;
+    }
+
+    return currentNode;
+  }
+
+  // 根据值删除
+  remove( item ) {
+    const prevNode = this.findPrev( item );
+    if ( prevNode === -1 ) {
+      console.log( '未找到元素' );
+      return;
+    } 
+    prevNode.next = prevNode.next.next;
+  }
+
+  // 遍历显示所有节点
+  display() {
+    let currentNode = this.head.next;
+    while( currentNode.next ) {
+      console.log( currentNode.element );
+      currentNode = currentNode.next;
+    }
+  }
+}
+```
