--- a/js/算法-排序.md
+++ b/js/算法-排序.md
@@ -8,9 +8,126 @@
 | 归并排序 | 最好情况、最坏情况和平均情况时间复杂度都是O(nlogn) | 空间复杂度比较高是O(n)，不是原地排序算法 | 稳定 | code |
 | 快速排序 | 平均情况时间复杂度是O(nlogn)，最坏情况下的时间复杂度是O(n<sup>2</sup>) | 空间复杂度是O(1)，是原地排序算法 | 不稳定 | code |
 
-
-
+***
+***
+***
 ### 冒泡排序
 ```js
+const bubbleSort = function( arr ) {
+  if ( arr .length <= 1 ) return;
+  for ( let i = 0; i < arr.length; i++ ) {
+    let hasChange = false;
+    for ( let j = 0; j < arr.length - i - 1; j++ ) {
+      if ( arr[ j ] > arr[ j + 1 ] ) {
+        const temp = arr[ j ];
+        arr[ j ] = arr[ j + 1 ];
+        arr[ j + 1 ] = temp;
+        hasChange = true;
+      } 
+    }
+    if ( !hasChange ) break;
+  }
+};
+```
 
+### 插入排序
+```js
+const insertion = function() {
+  if ( arr.length <= 1 ) return;
+  for ( let i = 1; i < arr.length; i++ ) {
+    const temp = arr[ i ];
+    let j = i - 1;
+
+    for ( ; j >= 0; j-- ) {
+      if ( arr[ j ] > temp ) {
+        arr[ j + 1 ] = arr[ j ];
+      } else {
+        break;
+      }
+    }
+
+    arr[ j + 1 ] = temp;
+
+  }
+
+}
+```
+
+### 选择排序
+```js
+const selectionSort = function( arr ) {
+  if ( arr.length <= 1 ) return;
+
+  for ( let i = 0; i < arr.length - 1; i++ ) {
+    let minIndex = i;
+    for ( let j = i + 1; j < arr.length; j++ ) {
+      if ( arr[ j ] < arr[ minIndex ] ) {
+        minIndex = j;
+      }
+    }
+    const temp = arr[ i ];
+    arr[ i ] = arr[ minIndex ];
+    arr[ minIndex ] = temp;
+  }
+}
+```
+
+### 归并排序
+```js
+const mergeArr = function( left, right ) {
+  let temp = [];
+  let leftIndex = 0;
+  let rightIndex = 0;
+
+  while ( left.length > leftIndex && right.length > rightIndex ) {
+    if ( left[ leftIndex ] <= right[ rightIndex ] ) {
+      temp.push( left[ leftIndex ] );
+      leftIndex++;
+    } else {
+      temp.push( right[ rightIndex ] );
+    }
+  }
+  
+  return temp.concat( left.slice( leftIndex )).concat( right.slice( rightIndex ) );
+}
+
+const mergetSort = function( arr ) {
+  if ( arr.length <= 1) return arr;
+
+  const middle = Math.floor( arr.length / 2 );
+  const left = arr.slice( 0, middle );
+  const right = arr.slice( middle );
+
+  return mergeArr( mergeSort( left ), mergeSort( right ) );
+}
+```
+
+### 快速排序
+```js
+const swap = function( arr, i, j ) {
+  const temp = arr[ i ];
+  arr[ i ] = arr[ j ];
+  arr[ j ] = temp;
+}
+
+const partition = function( arr, pivot, left, right ) {
+  const pivotVal = arr[ pivot ];
+  let startIndex = left;
+  for ( let i = left; i < right; i++ ) {
+    if ( arr[ i ] < pivotVal ) {
+      swap( arr, i, startIndex );
+      startIndex++;
+    }
+  }
+  swap( arr, startIndex, pivot );
+}
+
+const quickSort = function( arr, left, right) {
+  if ( left < right ) {
+    let pivot = right;
+    let parititionIndex = partition( arr, pivot, left, right );
+    quickSort( arr, left, partitionIndex - 1 < left ? left : partitionIndex - 1 );
+    quickSort( arr, partitionIndex + 1 > right ? right : partitionIndex + 1, right );
+  }
+}
 ```
