--- a/js/算法-排序.md
+++ b/js/算法-排序.md
@@ -7,6 +7,12 @@
 | 选择排序 | 最好情况时间复杂度、最坏情况时间和平均情况时间复杂度都为O(n<sup>2</sup>) | 空间复杂度是O(1)，是原地排序算法 | 不稳定 | code |
 | 归并排序 | 最好情况、最坏情况和平均情况时间复杂度都是O(nlogn) | 空间复杂度比较高是O(n)，不是原地排序算法 | 稳定 | code |
 | 快速排序 | 平均情况时间复杂度是O(nlogn)，最坏情况下的时间复杂度是O(n<sup>2</sup>) | 空间复杂度是O(1)，是原地排序算法 | 不稳定 | code |
+| 桶排序 | 概念 | 1、将要排序的数据分到几个有序的桶里，每个桶里的数据再单独进行排序。<br />2、桶内排完序之后，再把每个桶里的数据按照顺序一次取出，组成的序列就是有序的了。 
+| | 应用 | 1、适合用在外部排序中。<br /> 2、要排序的数据需要很容易就能划分成m个桶，并且桶与桶之间有着天然的大小顺序。<br />3、数据在各个桶之间的分布是比较均匀的。
+| 计数排序 | 概念 | 1、桶排序的一种特殊情况<br/>2、当要排序的n个数据，所处的范围并不大的时候，比如最大值是k，我们就可以把数据划分成k个桶 
+| | 应用 | 1、只能用在数据范围不大的场景中。2、只能给非负整数排序
+| 计数排序 | 概念 | 1、对要排序的数据有要求，需要可以分割出独立的“位”来比较。<br />2、位之间有递进的关系，如果a数据的高位比b数据大，那剩下的低位就不用比较了。<br />3、每一位的数据范围不能太大，可以用线性排序算法来排序，否则时间复杂度无法做到O(n)。
+
 
 ***
 ***
@@ -128,6 +134,76 @@ const quickSort = function( arr, left, right) {
     let parititionIndex = partition( arr, pivot, left, right );
     quickSort( arr, left, partitionIndex - 1 < left ? left : partitionIndex - 1 );
     quickSort( arr, partitionIndex + 1 > right ? right : partitionIndex + 1, right );
+  }
+}
+```
+
+
+### 桶排序
+```js
+function bucketSort( array, bucketSize = 5 ) {
+  if ( array.length < 2 ) {
+    return array
+  }
+  const buckets = createBuckets( array, bucketSize );
+  return sortBuckets( buckets );
+}
+
+function createBuckets( array, bucketSize ) {
+  let minValue = array[0];
+  let maxValue = array[0];
+
+  for ( let i = 1; i < array.length; i++ ) {
+    if ( array[ i ] < minValue ) {
+      minValue = array[ i ];
+    } else if ( array[ i ] > maxValue ) {
+      maxValue = array[ i ];
+    }
+  }
+
+  const bucketCount = Math.floor( ( maxValue - minValue ) / bucketSize ) + 1;
+  const buckets = [];
+  for ( let i = 0; i < bucketCount; i++ ) {
+    buckets[ i ] = [];
+  }
+
+  for ( let i = 0; i < array.length; i++ ) {
+    const bucketIndex = Math.floor( ( array[ i ] - minValue ) / bucketSize );
+    buckets[ bucketIndex ].push( array[ i ] );
+  }
+
+  return buckets;
+
+}
+
+function sortBuckets( buckets ) {
+  const sortedArray = [];
+  for ( let i = 0; i < buckets.length; i++ ) {
+    if ( buckets[ i ] != null ) {
+      insertionSort( buckets[ i ] );
+      sortedArray.push( ...buckets[ i ] );
+    }
+  }
+  return sortedArray;
+}
+
+function insertionSort( array ) {
+  const { length } = array;
+  if ( length <= 1 ) return;
+
+  for ( let i = 1; i < length; i++ ) {
+    let vvalue = array[ i ];
+    let j = i - 1;
+
+    while( j >= 0 ) {
+      if ( array[ j ] > value ) {
+        array[ j + 1 ] = array[ j ];
+        j--;
+      } else {
+        break;
+      }
+    }
+    array[ j + 1 ] = value;
   }
 }
 ```
