--- a/js/算法-排序.md
+++ b/js/算法-排序.md
@@ -11,7 +11,7 @@
 | | 应用 | 1、适合用在外部排序中。<br /> 2、要排序的数据需要很容易就能划分成m个桶，并且桶与桶之间有着天然的大小顺序。<br />3、数据在各个桶之间的分布是比较均匀的。
 | 计数排序 | 概念 | 1、桶排序的一种特殊情况<br/>2、当要排序的n个数据，所处的范围并不大的时候，比如最大值是k，我们就可以把数据划分成k个桶 
 | | 应用 | 1、只能用在数据范围不大的场景中。2、只能给非负整数排序
-| 计数排序 | 概念 | 1、对要排序的数据有要求，需要可以分割出独立的“位”来比较。<br />2、位之间有递进的关系，如果a数据的高位比b数据大，那剩下的低位就不用比较了。<br />3、每一位的数据范围不能太大，可以用线性排序算法来排序，否则时间复杂度无法做到O(n)。
+| 基数排序 | 概念 | 1、对要排序的数据有要求，需要可以分割出独立的“位”来比较。<br />2、位之间有递进的关系，如果a数据的高位比b数据大，那剩下的低位就不用比较了。<br />3、每一位的数据范围不能太大，可以用线性排序算法来排序，否则时间复杂度无法做到O(n)。
 
 
 ***
@@ -205,5 +205,44 @@ function insertionSort( array ) {
     }
     array[ j + 1 ] = value;
   }
+}
+```
+
+### 计数排序
+```js
+
+const countingSort = array => {
+  if ( array.length <= 1 ) return;
+
+  const max = findMaxValue( array );
+  const counts = new Array( max + 1 );
+
+  array.forEach( element => {
+    if ( !counts[ element ] ) {
+      counts[ element ] = 0;
+    }
+
+    counts[ element ]++;
+  })
+
+  let sortedIndex = 0;
+  counst.forEach(( count, i ) => {
+    while ( count > 0 ) {
+      array[ sortedIndex ] = i;
+      sortedIndex++;
+      count--;
+    }
+  })
+}
+
+function findMaxValue( array ) {
+  let max = array[ 0 ];
+  for ( let i = 1; i < array.length; i++ ) {
+    if ( array[ i ] > max ) {
+      max = array[ i ];
+    }
+  }
+
+  return max;
 }
 ```
