--- a/js/ECMAScript/循环语句.md
+++ b/js/ECMAScript/循环语句.md
@@ -1,10 +1,13 @@
 # for 循环执行顺序
 <div style="color: red">
 语法结构：<br />
-for ( initializatioin; expression; post-loop-expression ) {
+for ( initialization; expression; post-loop-expression ) {
   statement
 }
 
 执行循序如下：
 initialization => expression => statement => post-loop-expression => expression => statement => post-loop-expression => expression => statement ...
 </div>
+* initialization：确定循环变量的初始值，只在循环开始时执行一次
+* expression：每轮循环开始时，都要执行这个标间表达式，只有值为真，才继续进行循环
+* post-loop-expression：每轮循环的<b style="color: red;">最后一个操作</b>，通常用来递增循环变量
