--- a/js/ECMAScript/语句基础.md
+++ b/js/ECMAScript/语句基础.md
@@ -6,7 +6,13 @@ JavaScript程序的执行单位为行，也就是一行一行地执行。
 
 分号也是一个执行语句，叫作**空语句**。
 
+```js
+do {
+  a--;
+} while ( a > 0 ); // 分号不能省略
+```
 
 * [https://juejin.cn/post/6864135607468163079](https://juejin.cn/post/6864135607468163079)
 * [https://justjavac.com/javascript/2013/04/22/automatic-semicolon-insertion-in-javascript.html](https://justjavac.com/javascript/2013/04/22/automatic-semicolon-insertion-in-javascript.html)
 * [https://www.cnblogs.com/fsjohnhuang/p/4154503.html](https://www.cnblogs.com/fsjohnhuang/p/4154503.html)
+* [不使用分号的情况](https://wangdoc.com/javascript/features/style.html#%E4%B8%8D%E4%BD%BF%E7%94%A8%E5%88%86%E5%8F%B7%E7%9A%84%E6%83%85%E5%86%B5)
