抽象和接口

--- a/设计模式/封装、抽象、继承、多态.md
+++ b/设计模式/封装、抽象、继承、多态.md
@@ -11,6 +11,6 @@ What: is-a，单-多<br />
 How: 需-特-制<br />
 Why：解-复
 # 多态
-What: 子-被-父，运-调-现<br />
+What: 子-父，运-调-现<br />
 How: 需-提-制，继-接-duck-typing<br />
 Why: 高-扩-复
