多用组合少用继承

--- a/设计模式/封装、抽象、继承、多态.md
+++ b/设计模式/封装、抽象、继承、多态.md
@@ -1,16 +1,8 @@
 # 封装
-What: 隐-息，数-访-护<br />
-How: 暴-限，提-访-控-法<br />
-Why: 高-维-读，高-类-易<br />
+信-藏-或-数-护，类-暴-限-口，授权。提-语-持，例。意义-随意-必要
 # 抽象
-What: 隐-现，使-只-能，无-现<br />
-How: 通-现，特-非-须，函<br />
-Why: 高-展-维；低-杂，减-担
+藏-法-现，使-只-无。通-接-类-现，特-制-非。意义-改-现-不-定，减-围；低-复，减-细-担。
 # 继承
-What: is-a，单-多<br />
-How: 需-特-制<br />
-Why：解-复
+is-a，单继承-多继承，提-特-语-持，意义-解-复
 # 多态
-What: 子-父，运-调-现<br />
-How: 需-提-制，继-接-duck-typing<br />
-Why: 高-扩-复
+子-替-父，实-运-中，调-子-法-现。提-特-语-现。高-扩-复，比-继-接-duck-typing。模-原-巧-基础
