链表和数组

--- a/算法/数组.md
+++ b/算法/数组.md
@@ -39,4 +39,33 @@
       2.二维寻址公式：对于m * n的数组，a[i][j](i < m, j < n)的地址为，a[i][j]_address = base_address + ( i * n + j ) * data_type_size
     </td>
   </tr>
+  <tr>
+    <td width="70" style="text-align: center" >
+      插入操作
+    </td>
+    <td>
+      1.在开头插入：最坏时间复杂度O(n)，平均情况时间复杂度是O(n)。<br />
+      2.在中间第k位插入：时间复杂度是O(1)。<br />
+      3.在末尾插入：时间复杂度O(1)。
+    </td>
+  </tr>
+  <tr>
+    <td width="70" style="text-align: center" >
+      删除操作
+    </td>
+    <td>
+      1.在开头删除：最坏时间复杂度是O(n)，平均情况时间复杂度是O(n)。<br />
+      2.在中间第k位删除：每次删除操作只是记录数据已经被删除。当没有更多空间时，才触发执行真正的删除操作。<br />
+      3.在末尾删除：最好时间复杂度为O(1)。
+    </td>
+  </tr>
+  <tr>
+    <td style="text-align: center">
+      应用 
+    </td>
+    <td colspan="2">
+      1.平时的业务开发，可直接使用编程语言提供的容器类。<br />
+      2.特别底层的开发，直接使用数组更合适。 
+    </td>
+  </tr>
 </table>
