--- a/算法/链表.md
+++ b/算法/链表.md
@@ -176,3 +176,97 @@ class LinkedList {
   }
 }
 ```
+
+
+*** 
+<table style="width: 100%">
+  <tr>
+    <td rowspan="10" style="width: 14px; text-align: center;" >链表</td>
+    <td style="width: 60px;text-align: center;">概 念</td>
+    <td colspan="3">
+      1.通过“指针”将一组零散的内存块串联起来使用。<br />
+      2.插入、删除数据非常快速。
+    </td>
+  </tr>
+  <tr>
+    <td rowspan="6" style="text-align: center;">操 作</td>
+    <td rowspan="2" style="width: 80px; text-align: center;">单链表</td>
+    <td width="80" >查找</td>
+    <td>
+      1.根据指针一个结点一个结点地一次遍历，直到找到相应的结点。<br />
+      2.插入、删除数据非常快速。
+    </td>
+  </tr>
+  <tr>
+    <td>插入和删除</td>
+    <td>
+      1.只要考虑相邻结点的指针改变。
+      2.时间复杂度是O(1)。 
+    </td>
+  </tr>
+  <tr>
+    <td>循环链表</td>
+    <td>概念</td>
+    <td>
+      1.一种特殊的单链表。<br />
+      2.尾结点指针指向链表的头结点。 
+    </td>
+  </tr>
+  <tr>
+    <td rowspan="3">双向链表</td> 
+    <td>概念</td>
+    <td>
+      1.支持两个方法，有一个后继指针next指向后面的结点，一个前驱指针prev指向前面的结点。<br />
+      2.查找、插入和删除的效率都比单链表高。
+    </td>
+  </tr>
+  <tr>
+    <td>删除结点中“值等于某个给定值”的结点</td>
+    <td>
+      1.从头结点一次遍历对比，直到找到值等于给定值的结点，通过指针操作将其删除。<br />
+      2.时间复杂度为O(n)。 
+    </td>
+  </tr>
+  <tr>
+    <td>删除给定指针指向的结点</td>
+    <td>
+      1.从头结点开始遍历链表，直到p->next=q，p是q的前驱结点。<br /> 
+      2.时间复杂度是O(1)。
+    </td>
+  </tr>
+  <tr>
+    <td>
+      应用
+    </td>
+    <td colspan="3">
+      1.链表适合插入、删除操作频繁的场景。<br />
+      2.双向链表比单链表的插入、删除等操作简单、高效，适合用在很多情况下。<br />
+      3.循环链表适合要处理的数据具有环型结构特点，比如约瑟夫问题。
+    </td>
+  </tr>
+  <tr>
+    <td>
+      常考面试题
+    </td>
+    <td colspan="3">
+      1.单链表反转。
+      2.链表中环的检测。
+      3.两个有序的链表合并。
+      4.删除链表便捷条件处理。
+      5.求链表的中间结点。   
+    </td>
+  </tr>
+  <tr>
+    <td>
+      链表代码6个编写技巧
+    </td>
+    <td colspan="3">
+      1.理解指针或引用的含义。
+      2.警惕指针丢失和内存泄漏。
+      3.利用哨兵简化实现难度。
+      4.重点留意边界条件处理。
+      5.举例画图，辅助思考。
+      6.多些多练，没有捷径。
+    </td>
+  </tr>
+</table>
