--- a/算法/递归.md
+++ b/算法/递归.md
@@ -8,3 +8,34 @@
 递归代码要警惕重复计算
 
 
+<table>
+  <tr>
+    <td width="14" rowspan="3">递归</td>
+    <td>什么样的问题可以用递归来解决？</td>
+    <td>
+      1.一个问题的解可以分解为几个子问题的解。<br />
+      2.这个问题与分解之后的子问题，除了数据规模不同，求解思路完全一样。
+      3.存在递归终止条件。
+    </td>
+  </tr>
+  <tr>
+    <td>
+      递归代码编写技巧 
+    </td>
+    <td>
+      1.找到如何将大问题分解为小问题的规律，基于此写出递推公式，推敲终止条件，将递推公式和终止条件翻译成代码。<br />
+      2.只要遇到递归，就把它抽象成一个递推公式，不用想一层层的调用关系，不要试图人脑去分解递归的每个步骤。
+    </td>
+  </tr>
+  <tr>
+    <td>
+      递归代码编写难点
+    </td>
+    <td>
+      1.警惕堆栈溢出。可以通过在代码中限制递归调用的最大深度。<br />
+      2.警惕重复计算。可以通过一个数据结构（比如散列表）来保存已经求解过的f(k)。当递归调用到f(k)时，先看下是否是已经求解过了。
+    </tr>
+  </tr>
+</table>
+
+
