--- a/算法/栈.md
+++ b/算法/栈.md
@@ -84,3 +84,78 @@ while( res !== - 1 ) {
 
 exports.CreatedStack = StackBasedLinkedList;
 ```
+
+<table style="width: 100%;>
+	<tr>
+		<td width="16" rowspan="7">
+			栈	
+		</td>	
+		<td width="50" style="text-align: center;">
+			概 念	
+		</td>
+		<td colspan="2">
+			1.一种“操作有限”的线性表，只允许在一端插入和删除数据。<br />
+			2.后进者先出，先进者后出。	
+		</td>
+	</tr>
+	<tr>
+		<td style="text-align: center;">
+			实 现
+		</td>
+		<td colspan="2">
+			1.只需要一个栈顶指针。<br />
+			2.用数组实现的栈叫顺序栈，用链表实现的栈叫链式栈
+		</td>
+	</tr>
+	<tr>
+		<td style="text-align: center;">
+			操 作
+		</td>
+		<td width="90" style="text-align: center;">
+			入栈和出栈
+		</td>
+		<td>
+			时间复杂度是O(1)，空间复杂度是O(1)。
+		</td>
+	</tr>
+	<tr>
+		<td rowspan="3" style="text-align: center;">
+			支持动态扩容的栈	
+		</td>
+		<td style="text-align: center;">
+			实 现
+		</td>
+		<td>
+			1.底层依赖一个支持动态扩容的数组。<br />
+			2.当栈满了之后，就申请一个更大的数组，将原来的数据搬移到新数组中。
+		</td>
+	</tr>
+	<tr>
+		<td style="text-align: center;">
+			入 栈
+		</td>
+		<td>
+			1.最好情况时间复杂度O(1)。
+			2.最坏情况时间复杂度O(n)。
+			3.均摊时间复杂度O(1)。
+		</td>
+	</tr>
+	<tr>
+		<td style="text-align: center;">
+			出 栈
+		</td>
+		<td>
+			时间复杂度O(1)
+		</td>
+	</tr>
+	<tr>
+		<td style="text-align: center;">
+			应 用
+		</td>
+		<td colspan="2">
+			1.函数调用栈。<br />
+			2.表达式求值。<br />
+			3.括号匹配。
+		</td>
+	</tr>
+</table>
