--- a/算法/递归.md
+++ b/算法/递归.md
@@ -33,7 +33,7 @@
     </td>
     <td>
       1.警惕堆栈溢出。可以通过在代码中限制递归调用的最大深度。<br />
-      2.警惕重复计算。可以通过一个数据结构（比如散列表）来保存已经求解过的f(k)。当递归调用到f(k)时，先看下是否是已经求解过了。
+      2.警惕重复计算。可以通过一个数据结构（比如散列表）来保存已经求解过的f(k)。当递归调用到f(k)时，先看下是否是已经求解过了。如果是，则直接从散列表中取值返回，不需要重复计算。
     </tr>
   </tr>
 </table>
