--- a/算法/二分查找.md
+++ b/算法/二分查找.md
@@ -1,7 +1,9 @@
-<table>
+<table border="1">
   <tr>
-    <td rowspan="5">二分查找</td>
-    <td>概念</td>
+    <td rowspan="5" width="16">二分查找</td>
+    <td width="60" style="text-align: center;">
+      概 念
+    </td>
     <td>
       1、二分查找针对的是一个有序的数据集合，查找思想有点类似分治思想。<br />
       2、每次都通过跟区间的中间元素对比，将待查找的区间缩小为之前的一半，指导找到要查找的元素，或者区间被缩小为0。<br />
@@ -9,19 +11,43 @@
     </td>
   </tr>
   <tr>
-    <td>编写代码要点</td>
-    <td></td>
+    <td style="text-align: center;">编写代码要点</td>
+    <td>
+      1.关注循环退出条件。<br /> 
+      2.关注mid的取值。<br />
+      3.关注low和high的更新
+    </td>
   </tr>
   <tr>
-    <td>概念</td>
-    <td></td>
+    <td style="text-align: center;">
+      应 用
+    </td>
+    <td>
+      1.二分查找只能用在数据是通过顺序表来储存的数据结构上。<br />
+      2.二分查找针对的是有序数据。如果数据是无序的，需先排序。<br />
+      3.数据量太小不适合二分查找，直接用顺序遍历即可。<br />
+      4.数据量太大不能用二分查找。
+    </td>
   </tr>
   <tr>
-    <td>概念</td>
-    <td></td>
+    <td style="text-align: center;">
+      4个常用变形问题 
+    </td>
+    <td>
+      1.查找第一个值等于给定值的元素。<br />
+      2.查找最后一个值等于给定值的元素。<br />
+      3.查找第一个大于等于给定值的元素。<br />
+      4.查找最后一个小于等于给定值的元素。
+    </td>
   </tr>
   <tr>
-    <td>概念</td>
-    <td></td>
+    <td style="text-align: center;">
+      变形问题出错要点
+    </td>
+    <td>
+      1.终止条件。<br />
+      2.区间上下界更新方法。<br />
+      3.返回值选择。
+    </td>
   </tr>
 </table>
