--- a/算法/递归.md
+++ b/算法/递归.md
@@ -8,11 +8,11 @@
 递归代码要警惕重复计算
 
 
-<table>
+<table style="width: 100%; border: 1px solid #f4981d;">
   <tr>
-    <td width="14" rowspan="3">递归</td>
+    <td width="14" rowspan="3" style="background-color: #f4981d; color: #fff;">递归</td>
     <td>什么样的问题可以用递归来解决？</td>
-    <td>
+    <td style="border-color: #f00">
       1.一个问题的解可以分解为几个子问题的解。<br />
       2.这个问题与分解之后的子问题，除了数据规模不同，求解思路完全一样。
       3.存在递归终止条件。
