--- a/算法/队列.md
+++ b/算法/队列.md
@@ -105,3 +105,88 @@ while( res !== - 1 ) {
 ```js
 // 基于链表的循环队列
 ```
+
+<table border="1" style="width: 100%; border: 1px solid #f4981d;">
+  <tr>
+    <td rowspan="8" width="16" style="background-color: #f4981d; color: #fff;">
+      队 列
+    </td>
+    <td align="center" width="80">
+      概 念
+    </td>
+    <td colspan="2">
+      1.一种操作受限的线性表数据接口。<br />
+      2.先进者先出。
+    </td>
+  </tr>
+  <tr>
+    <td align="center">
+      实 现
+    </td>
+    <td colspan="2">
+      需要两个指针：1.head指针，指向队头；2.tail指针，指向队尾。
+    </td>
+  </tr>
+  <tr>
+    <td align="center" rowspan="5">
+      分类和操作 
+    </td>
+    <td align="center" width="90">
+      顺序队列
+    </td>
+    <td>
+      1.用数组实现的队列。<br />
+      2.出队时不用搬移数据。如果没有空闲空间，只需要在入队时再集中触发一次数据的搬移操作。
+    </td>
+  </tr>
+  <tr>
+    <td>
+      链式队列
+    </td>
+    <td>
+      用链表实现的队列。
+    </td>
+  </tr>
+  <tr>
+    <td>
+      循环队列
+    </td>
+    <td>
+      1.概念：把数组首尾相连，扳成一个环。<br />
+      2.实现：确定好对空和队满的判定条件。（队列为空的判断条件是head == tail，队满时，(tail + 1) % n = head)。<br />
+      3.缺点：队列满时，tail指向的位置没有储存数据，所有循环队列会浪费一个数组的储存空间。
+    </td>
+  </tr>
+  <tr>
+    <td>
+      阻塞队列
+    </td>
+    <td>
+      1.在队列基础上增加了阻塞操作。<br />
+      2.在队列为空的时候，从对头取数据会被阻塞。
+    </td>
+  </tr>
+  <tr>
+    <td>
+      并发队列
+    </td>
+    <td>
+      1.概念：线程安全的队列。<br />
+      2.实现：<br />
+      方式一：直接在enqueue()、dequeue()上加锁，锁颗粒度大并发度会比较低，同一时刻仅允许一个存或者取操作；<br />
+      方式二：利用CAS原子操作，可以实现非常高效的并发队列。
+    </td>
+  </tr>
+  <tr>
+    <td>
+      应用
+    </td>
+    <td colspan="2">
+      1.平时的业务开发很少直接用到队列。<br />
+      2.一些具有特殊特性的队列应用比较广泛，比如循环队列、阻塞队列和并发队列。<br />
+      3.循环队列比链式队列应用更加广泛。<br />
+      4.高性能队列Disruptor、Linux环形缓存，都用到了循环并发队列。<br />
+      java concurrent并发包利用ArrayBlockingQueue来实现公平锁等。
+    </td>
+  </tr>
+</table>
