算法表格修改完毕

--- a/算法/二分查找.md
+++ b/算法/二分查找.md
@@ -1,6 +1,6 @@
-<table border="1">
+<table border="1" style="width: 100%; border: 1px solid #f4981d; width: 100%;">
   <tr>
-    <td rowspan="5" width="16">二分查找</td>
+    <td rowspan="5" width="16" style="color: #fff; background-color: #f4981d;">二分查找</td>
     <td width="60" style="text-align: center;">
       概 念
     </td>
