--- a/算法/复杂度分析.md
+++ b/算法/复杂度分析.md
@@ -131,10 +131,10 @@ void print( int n ) {
 [看原文](https://time.geekbang.org/column/article/40447)
 
 
-<table width="100%">
+<table border="1" style="width: 100%; border: 1px solid #f4981d; width: 100%;">
   <tr>
-    <td rowspan="15" width="16">复杂度</td> 
-    <td rowspan="5" width="80" style="text-align: center">分类</td>
+    <td rowspan="15" width="16" style="color: #fff; background-color: #f4981d;">复杂度</td> 
+    <td rowspan="5" width="80" style="text-align: center">分 类</td>
     <td rowspan="4" width="110">时间复杂度</td>
     <td width="auto">最好情况</td>
   </tr>
