--- a/算法/数组.md
+++ b/算法/数组.md
@@ -13,9 +13,9 @@
 
 
 
-<table width="100%">
+<table border="1" style="width: 100%; border: 1px solid #f4981d; width: 100%;" >
   <tr>
-    <td rowspan="5" width="16" style="text-align: center">
+    <td rowspan="5" width="16" align="center" style="background-color: #f4981d; color: #fff;">
       数组
     </td>
     <td width="80" style="text-align: center" >
@@ -29,7 +29,7 @@
   </tr>
   <tr>
     <td rowspan="3" style="text-align: center">
-      操作
+      操 作
     </td>
     <td width="70" style="text-align: center" >
       随机访问
@@ -61,7 +61,7 @@
   </tr>
   <tr>
     <td style="text-align: center">
-      应用 
+      应 用 
     </td>
     <td colspan="2">
       1.平时的业务开发，可直接使用编程语言提供的容器类。<br />
