--- a/算法/栈.md
+++ b/算法/栈.md
@@ -85,9 +85,9 @@ while( res !== - 1 ) {
 exports.CreatedStack = StackBasedLinkedList;
 ```
 
-<table style="width: 100%;>
+<table border="1" style="width: 100%; border: 1px solid #f4981d; width: 100%;" >
 	<tr>
-		<td width="16" rowspan="7">
+		<td width="16" rowspan="7" style="background-color: #f4981d; color: #fff;">
 			栈	
 		</td>	
 		<td width="50" style="text-align: center;">
