--- a/算法/链表.md
+++ b/算法/链表.md
@@ -179,9 +179,9 @@ class LinkedList {
 
 
 *** 
-<table style="width: 100%">
+<table border="1" style="width: 100%; border: 1px solid #f4981d; width: 100%;">
   <tr>
-    <td rowspan="10" style="width: 14px; text-align: center;" >链表</td>
+    <td rowspan="10" width="16" style="color: #fff; background-color: #f4981d;">链表</td>
     <td style="width: 60px;text-align: center;">概 念</td>
     <td colspan="3">
       1.通过“指针”将一组零散的内存块串联起来使用。<br />
@@ -191,52 +191,52 @@ class LinkedList {
   <tr>
     <td rowspan="6" style="text-align: center;">操 作</td>
     <td rowspan="2" style="width: 80px; text-align: center;">单链表</td>
-    <td width="80" >查找</td>
+    <td width="80" align="center">查 找</td>
     <td>
       1.根据指针一个结点一个结点地一次遍历，直到找到相应的结点。<br />
       2.插入、删除数据非常快速。
     </td>
   </tr>
   <tr>
-    <td>插入和删除</td>
+    <td align="center">插入和删除</td>
     <td>
       1.只要考虑相邻结点的指针改变。
       2.时间复杂度是O(1)。 
     </td>
   </tr>
   <tr>
-    <td>循环链表</td>
-    <td>概念</td>
+    <td align="center">循环链表</td>
+    <td align="center">概 念</td>
     <td>
       1.一种特殊的单链表。<br />
       2.尾结点指针指向链表的头结点。 
     </td>
   </tr>
   <tr>
-    <td rowspan="3">双向链表</td> 
-    <td>概念</td>
+    <td rowspan="3" align="center">双向链表</td> 
+    <td align="center">概 念</td>
     <td>
       1.支持两个方法，有一个后继指针next指向后面的结点，一个前驱指针prev指向前面的结点。<br />
       2.查找、插入和删除的效率都比单链表高。
     </td>
   </tr>
   <tr>
-    <td>删除结点中“值等于某个给定值”的结点</td>
+    <td align="center">删除结点中“值等于某个给定值”的结点</td>
     <td>
       1.从头结点一次遍历对比，直到找到值等于给定值的结点，通过指针操作将其删除。<br />
       2.时间复杂度为O(n)。 
     </td>
   </tr>
   <tr>
-    <td>删除给定指针指向的结点</td>
+    <td align="center">删除给定指针指向的结点</td>
     <td>
       1.从头结点开始遍历链表，直到p->next=q，p是q的前驱结点。<br /> 
       2.时间复杂度是O(1)。
     </td>
   </tr>
   <tr>
-    <td>
-      应用
+    <td align="center">
+      应 用
     </td>
     <td colspan="3">
       1.链表适合插入、删除操作频繁的场景。<br />
@@ -245,7 +245,7 @@ class LinkedList {
     </td>
   </tr>
   <tr>
-    <td>
+    <td align="center">
       常考面试题
     </td>
     <td colspan="3">
@@ -257,7 +257,7 @@ class LinkedList {
     </td>
   </tr>
   <tr>
-    <td>
+    <td align="center">
       链表代码6个编写技巧
     </td>
     <td colspan="3">
