--- a/算法/队列.md
+++ b/算法/队列.md
@@ -140,7 +140,7 @@ while( res !== - 1 ) {
     </td>
   </tr>
   <tr>
-    <td>
+    <td align="center">
       链式队列
     </td>
     <td>
@@ -148,7 +148,7 @@ while( res !== - 1 ) {
     </td>
   </tr>
   <tr>
-    <td>
+    <td align="center">
       循环队列
     </td>
     <td>
@@ -158,7 +158,7 @@ while( res !== - 1 ) {
     </td>
   </tr>
   <tr>
-    <td>
+    <td align="center">
       阻塞队列
     </td>
     <td>
@@ -167,7 +167,7 @@ while( res !== - 1 ) {
     </td>
   </tr>
   <tr>
-    <td>
+    <td align="center">
       并发队列
     </td>
     <td>
@@ -178,8 +178,8 @@ while( res !== - 1 ) {
     </td>
   </tr>
   <tr>
-    <td>
-      应用
+    <td align="center">
+      应 用
     </td>
     <td colspan="2">
       1.平时的业务开发很少直接用到队列。<br />
