--- a/算法/排序.md
+++ b/算法/排序.md
@@ -1,18 +1,177 @@
+<table border="1" style="width: 100%; border: 1px solid #f4981d; width: 100%;">
+  <tr style="background-color: #f4981d; color: #fff;">
+    <td align="center" width="80">
+      排序算法
+    </td>
+    <td align="center" colspan="3">
+      分析一个排序算法的三个指标
+    </td>
+  </tr>
+  <tr>
+    <td></td>
+    <td align="center">
+      执行效率
+    </td>
+    <td align="center">
+      内存消耗
+    </td>
+    <td align="center">
+      稳定性
+    </td>
+  </tr>
+  <tr>
+    <td></td>
+    <td>
+      1.最好情况、最坏情况、平均情况时间复杂度。<br />
+      2.时间复杂度的系数、常数、低阶。<br />
+      3.比较次数和交换（或移动）次数。<br />
+    </td>
+    <td>
+      1.排序算法的空间复杂度，需要通过原地排序来分析。<br />
+      2.原地排序算法特指空间复杂度是O(1)的排序算法。
+    </td>
+    <td>
+      稳定排序算法可以保持数据相同的两个对象，在排序之后的前后顺序不变。
+    </td>
+  </tr>
+  <tr>
+    <td align="center">
+      冒泡排序
+    </td>
+    <td>
+      最好情况时间复杂度是O(n)，最坏情况时间复杂度为O(n<sup>2</sup>)。
+    </td>
+    <td>
+      空间复杂度是O(1)，是原地排序算法。
+    </td>
+    <td>
+      稳定的排序算法。
+    </td>
+  </tr>
+  <tr>
+    <td align="center">
+      插入排序
+    </td>
+    <td>
+      1.有序数组：最好情况时间复杂度为O(n)。<br />
+      2.倒序数组：最坏情况时间复杂度为O(n<sup>2</sup>)。<br />
+      3.插入数组：平均时间复杂度为O(n<sup>2</sup>)。
+    </td>
+    <td>
+      空间复杂度是O(1)，是原地排序算法。
+    </td>
+    <td>
+      稳定的排序算法。
+    </td>
+  </tr>
+  <tr>
+    <td align="center">
+      选择排序
+    </td>
+    <td>
+      最好情况时间复杂度、最坏情况和平均情况时间复杂度都为O(n<sup>2</sup>)。
+    </td>
+    <td>
+      空间复杂度是O(1)，是原地排序算法。
+    </td>
+    <td>
+      不稳定的排序算法。
+    </td>
+  </tr>
+  <tr>
+    <td align="center">
+      归并排序
+    </td>
+    <td>
+      最好情况时间复杂度、最坏情况和平均情况时间复杂度都为O(n<sup>2</sup>)。
+    </td>
+    <td>
+      空间复杂度比较高，是O(n)，
+      不是原地排序算法。
+    </td>
+    <td>
+      稳定的排序算法。
+    </td>
+  </tr>
+  <tr>
+    <td align="center">
+      快速排序
+    </td>
+    <td>
+      平均情况时间复杂度是O(nlogn)，最坏情况下的时间复杂度是O(n<sup>2</sup>)。
+    </td>
+    <td>
+      空间复杂度是O(1)，是原地排序算法。
+    </td>
+    <td>
+      不稳定的排序算法。
+    </td>
+  </tr>
+</table>
 
-| 排序类型 | 执行效率 | 内存消耗 | 稳定性 | 代码实现 |
-|---|---|---|---|---|
-| | 1、最好情况、最坏情况、平均情况时间复杂度<br />2、时间复杂度的系数、常数、低阶<br />3、比较次数和交换（或移动）次数| 1、排序算法的空间复杂度，需要通过原地排序来分析<br />2、原地排序算法特指空间复杂度是O(1)的排序算法 | 稳定排序算法可以保持数据相同的两个对象，在排序之后的前后顺序不变 | |
-| 冒泡排序 | 最好情况时间复杂度是O(n)<br />最坏情况时间复杂度O(n<sup>2</sup>) | 空间复杂度是O(1),是原地排序算法 | 稳定 | [code](#冒泡排序) |
-| 插入排序 | 1、有序数组：最好情况复杂度为O(n)<br />2、倒序数组：最坏情况时间复杂度为O(n<sup>2</sup>)<br />3、插入数据：平均时间复杂度为O(n<sup>2</sup>) | 空间复杂度是O(1)，是原地排序算法 | 稳定 | code |
-| 选择排序 | 最好情况时间复杂度、最坏情况时间和平均情况时间复杂度都为O(n<sup>2</sup>) | 空间复杂度是O(1)，是原地排序算法 | 不稳定 | code |
-| 归并排序 | 最好情况、最坏情况和平均情况时间复杂度都是O(nlogn) | 空间复杂度比较高是O(n)，不是原地排序算法 | 稳定 | code |
-| 快速排序 | 平均情况时间复杂度是O(nlogn)，最坏情况下的时间复杂度是O(n<sup>2</sup>) | 空间复杂度是O(1)，是原地排序算法 | 不稳定 | code |
-| 桶排序 | 概念 | 1、将要排序的数据分到几个有序的桶里，每个桶里的数据再单独进行排序。<br />2、桶内排完序之后，再把每个桶里的数据按照顺序一次取出，组成的序列就是有序的了。 
-| | 应用 | 1、适合用在外部排序中。<br /> 2、要排序的数据需要很容易就能划分成m个桶，并且桶与桶之间有着天然的大小顺序。<br />3、数据在各个桶之间的分布是比较均匀的。
-| 计数排序 | 概念 | 1、桶排序的一种特殊情况<br/>2、当要排序的n个数据，所处的范围并不大的时候，比如最大值是k，我们就可以把数据划分成k个桶 
-| | 应用 | 1、只能用在数据范围不大的场景中。2、只能给非负整数排序
-| 基数排序 | 概念 | 1、对要排序的数据有要求，需要可以分割出独立的“位”来比较。<br />2、位之间有递进的关系，如果a数据的高位比b数据大，那剩下的低位就不用比较了。<br />3、每一位的数据范围不能太大，可以用线性排序算法来排序，否则时间复杂度无法做到O(n)。
-
+<table border="1" style="width: 100%; border: 1px solid #f4981d; width: 100%;">
+  <tr>
+    <td colspan="3" align="center" style="background-color: #f4981d; color: #fff;">
+      三种线性排序（复杂度为O(n)）
+    </td>
+  </tr>
+  <tr>
+    <td align="center" width="110" rowspan="2">
+      桶排序
+    </td>
+    <td align="center" width="80">
+      概 念
+    </td>
+    <td>
+      1.将要排序的数据分到几个有序的桶里，每个桶里的数据再单独进行排序。<br />
+      2.桶内排完序之后，再把每个桶里的数据按照顺序依次取出，组成的序列就是有序的了。
+    </td>
+  </tr>
+  <tr>
+    <td align="center">
+      应 用
+    </td>
+    <td>
+      1.适合用在外部排序中。<br />
+      2.要排序的数据需要很容易就能划分成m个桶，并且桶与桶之间有着天然的大小顺序。<br />
+      3.数据在各个桶之间的分布是比较均匀的。
+    </td>
+  </tr>
+  <tr>
+    <td align="center" rowspan="2">
+      计数排序
+    </td>
+    <td align="center">
+      概 念
+    </td>
+    <td>
+      1.桶排序的一种特殊情况。<br />
+      2.当要排序的n个数据，所处的范围并不大的时候，比如最大值是k，我们就可以把数据划分成k个桶。
+    </td>
+  </tr>
+  <tr>
+    <td align="center">
+      应 用
+    </td>
+    <td>
+      1.只能用在数据范围不大的场景中。<br />
+      2.只能给非负整数排序。
+    </td>
+  </tr>
+  <tr>
+    <td align="center">
+      基数排序
+    </td>
+    <td align="center">
+      概 念
+    </td>
+    <td>
+      1.对要排序的数据有要求，需要可以分割出独立的“位”来比较。<br/>
+      2.位之间有递进的关系，如果a数据的高位比b数据大，那剩下的低位就不用比较了。<br/>
+      3.每一位的数据范围不能太大，可以用线性排序算法来排序，否则时间复杂度无法做到O(n)。
+    </td>
+  </tr>
+</table>
 
 ***
 ***
