--- a/算法/复杂度分析.md
+++ b/算法/复杂度分析.md
@@ -133,7 +133,7 @@ void print( int n ) {
 
 <table border="1" style="width: 100%; border: 1px solid #f4981d; width: 100%;">
   <tr>
-    <td rowspan="15" width="16" style="color: #fff; background-color: #f4981d;">复杂度</td> 
+    <td rowspan="16" width="16" style="color: #fff; background-color: #f4981d;">复杂度</td> 
     <td rowspan="5" width="80" style="text-align: center">分 类</td>
     <td rowspan="4" width="110">时间复杂度</td>
     <td width="auto">最好情况</td>
@@ -177,7 +177,7 @@ void print( int n ) {
     </td>
   </tr>
   <tr>
-    <td colspan="2">对数阶：O(logn)</td>
+    <td colspan="2">对数阶：O(logn);</td>
   </tr>
   <tr>
     <td colspan="2">线数阶：O(n)</td>
@@ -189,9 +189,25 @@ void print( int n ) {
     <td colspan="2">平方阶：O(n<sup>2</sup>)，O(n<sup>3</sup>)，.....，O(n<sup>k</sup>)</td>
   </tr>
   <tr>
-    <td colspan="2">指数阶：O(2<sup>n<sup>)</td>
+    <td colspan="2">指数阶：O(2<sup>n</sup>)</td>
   </tr>
   <tr>
     <td colspan="2">阶乘阶：O(n!)</td>
   </tr>
+  <tr>
+    <td align="center">
+      好处
+    </td>
+    <td colspan="2">
+      与宿主平台无关，不受数据规模影响
+    </td>
+  </tr>
 </table>
+
+#### 对数
+```c
+i=1; 
+while (i <= n) { 
+  i = i * 2; 
+}
+```
